Fix: Adjusted .map-container height to fix cutoff issue on mobile

--- a/my-map-app/src/App.css
+++ b/my-map-app/src/App.css
@@ -151,8 +151,10 @@ p {
 .map-container {
   position: fixed;
   top: 68px;
-  width: 100vw;
-  height: calc(100vh - 60px);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: calc(100vh - 68px);
 }
 
 body.sidebar-open {
